--- a/force-app/main/default/classes/ClassA.cls
+++ b/force-app/main/default/classes/ClassA.cls
@@ -1,3 +1,4 @@
+//this is my new class
 public virtual class ClassA {
     public void methodA(){
         system.debug('I am printing from Class A');
